<!-- $Header$ -->
<html>

<title>Release Notes: Napkin Look & Feel</title>

<body>

<h4>alpha-005, ???</h4>

<ul>
<li> Put SwingSet2 source in the swingset jar file.
<li> No longer need "switch and back" to make demo work.  (This was a bug in
     SwingSet2.)
<li> Get titled borders working.
<li> Separators.
<li> Set all the properties to use drawn borders.
<li> Wrap all borders in a simple thing that at least anti-aliases all the
     the stuff.
<li> Indeterminate progress bar.
<li> Split panes.
</ul>

<h4>alpha-004, 15 May 2004</h4>

<ul>
<li> Progress bar gets scribbled in.
<li> File chooser (borrowed entirely from <tt>MetalFileChooserUI</tt>, as the
     <tt>BasicFileChooserUI</tt> class seems entirely inadaquate).
<li> Text areas are a normal size.
<li> Paint background on each individual component, so changes to contents
     don't overlay on each other.
<li> Much better about switching to/from Napkin LAF.
</ul>

<h4>alpha-003, 16 April 2004</h4>

<ul>
<li> Fix fatal bug in tabbed panes
<li> Show disabled buttons better
</ul>

<h4>alpha-002, 11 April 2004</h4>

<ul>
<li> tabbed panes
<li> fonts loaded from jar
<li> new font: Felt Tip Roman (has bold + full char set)
    <i>I want to add a few choices of fonts; this release I'm just
    switching to the new one but next release I want to have them
    choosable because both are good.</i>
<li> build the relase automatically
<li> bugs, bugs, bugs
</ul>

</body>
</html>