@@ -1,5 +1,5 @@
 #Release properties
-#Sat May 15 09:52:30 EDT 2004
-when=2004/05/15 09\:52
+#Sun May 30 17:02:36 EDT 2004
 release=1.0-alpha
-build=004
+when=2004/05/30 17\:02
+build=005
