@@ -8,6 +8,9 @@
 <h4>alpha-005, ???</h4>
 
 <ul>
+<li> <b>Note:</b> This LaF will not work under Java 1.3.  There were many
+     changes in the LaF infrastructure and I can't figure out a way to do
+     one development for both versions.
 <li> Put SwingSet2 source in the swingset jar file.
 <li> No longer need "switch and back" to make demo work.  (This was a bug in
      SwingSet2.)
